[package]
name = "adwaita-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.1", package = "libadwaita" }
gtk = { version = "0.4", package = "gtk4" }

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
